# flight-search-api

./: .dockerignore  .env.example  .gitattributes  .gitignore  AUDIT_ULTRA_DETAILLE.md  Dockerfile  RAPPORT_TEST_KAYAK_MULTICITE.md  README.md  REFACTORING_WORKFLOW_PLAN_DETAILS.tmp  pyproject.toml  refactoring.md  text.txt
.claude/: CLAUDE.md  NEW_CLAUDE.md  PLAN.md
.claude/.claude/: settings.local.json
.claude/agents/: code.md  document.md  explore.md  plan.md  reviewer.md  test.md
.claude/commands/: execute-plan-phase.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
app/: __init__.py  exceptions.py  main.py  types.py
app/api/: routes.py
app/core/: __init__.py  config.py  constants.py  logger.py
app/models/: __init__.py  filters.py  google_flight_dto.py  internal.py  kayak_flight_dto.py  kayak_segment.py  proxy.py  request.py  response.py
app/services/: __init__.py  combination_generator.py  crawler_service.py  filter_service.py  flight_parser.py  google_flight_parser.py  kayak_flight_parser.py  kayak_polling_config.py  network_response_filter.py  polling_service.py  proxy_service.py  retry_strategy.py  search_service.py  segment_filter.py
app/utils/: __init__.py  browser_fingerprint.py  duration.py  google_flights_url.py  kayak_poll_capture.py  kayak_url.py  resource_blocking.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARDS.md  PLANNING.md  REFERENCES.md  SPECS.md  SPECS.md.backup  TEMPLATE.md  TEMPLATE_REFERENCES.md  TEMPLATE_SPECS.md  VERSIONS.md  architecture.md
docs/adrs/: 001-crawl4ai-vs-serpapi.md  002-decodo-vs-oxylabs.md  003-top10-memory-vs-db.md  004-tenacity-retry.md  005-captcha-detection-mvp.md  006-css-vs-llm-extraction.md
docs/references/: anti-detection.md  captcha-detection.md  crawl4ai.md  decodo-proxies.md  dokploy.md  fastapi.md  github-actions.md  google-flights.md  kayak.md  pydantic-v2.md  tenacity.md
tests/: conftest.py
tests/fixtures/: factories.py  helpers.py  mocks.py
tests/integration/: __init__.py  (+13 more)
(+83 files in other folders)
